# daegu-library

./: .gitattributes  .gitignore
dglib_api/: package-lock.json  pom.xml  백앤드.bat
dglib_chatbot/: README.md  package-lock.json  pyproject.toml  꿈틀이 AI.bat
dglib_chatbot/chat_feedback_logs/dislike/: chat_log_2025-06-25.jsonl  chat_log_2025-06-26.jsonl  chat_log_2025-06-30.jsonl
dglib_chatbot/chat_feedback_logs/like/: chat_log_2025-06-25.jsonl  chat_log_2025-06-26.jsonl  chat_log_2025-06-27.jsonl  chat_log_2025-07-07.jsonl
dglib_chatbot/chat_logs/: chat_log_2025-05-29.jsonl  chat_log_2025-05-30.jsonl  chat_log_2025-06-11.jsonl  chat_log_2025-06-12.jsonl  chat_log_2025-06-13.jsonl  chat_log_2025-06-15.jsonl  chat_log_2025-06-16.jsonl  chat_log_2025-06-17.jsonl  chat_log_2025-06-18.jsonl  chat_log_2025-06-19.jsonl  chat_log_2025-06-20.jsonl  chat_log_2025-06-23.jsonl  chat_log_2025-06-24.jsonl  chat_log_2025-06-25.jsonl  chat_log_2025-06-26.jsonl  chat_log_2025-06-27.jsonl  chat_log_2025-06-28.jsonl  chat_log_2025-06-30.jsonl  chat_log_2025-07-02.jsonl  chat_log_2025-07-03.jsonl  chat_log_2025-07-04.jsonl  chat_log_2025-07-07.jsonl
dglib_chatbot/dglib_chatbot/: app.py
dglib_chatbot/dglib_chatbot/model/: config.json
dglib_chatbot/dglib_chatbot/services/: chatbot_preprocessing.py  chatbot_response.py  nlp.py  response_prompt.py  session_manager.py
dglib_chatbot/dglib_chatbot/utils/: clean_text.py  client.py  config.py
dglib_chatbot/speech_recognition/: tcp_service copy.py  tcp_service.py  tts_request.py
dglib_client/: index.html  package-lock.json  package.json  vite.config.js  클라이언트.bat
dglib_client/certs/: private.key  (+1 more)
dglib_python/: .gitignore  Dockerfile  fly.toml  pyproject.toml  readme.txt  requirements.txt
dglib_python/dglib_python/: bookGenre.py  bookSearchApi.py  book_main.py  config.py  data4Api.py  test.py
dglib_python/dglib_python/models/: book.py
dglib_python/dglib_python/schedulers/: book_updater.py
dglib_python/dglib_python/services/: aladin.py  book_service.py  info_naru.py
dglib_python/dglib_python/testppt/: camera.py  main.py
dglib_python/dglib_python/utils/: http.py
report/: 기능, 정책 정의서.xlsx
(+588 files in other folders)
