[project]
name = "dglib-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "DaehyungKim",email = "daehyung0330@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "pytorch-crf (>=0.7.2,<0.8.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "faster-whisper[ctranslate2] (>=1.1.1,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "soundfile (>=0.12.1,<0.13.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "llvmlite (>=0.41.0,<0.42.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
start = "dglib_chatbot.app:main"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"



[tool.poetry.dependencies]
torch = {version = ">=2.5.1,<3.0.0", source = "pytorch-cu121"}
torchvision = {version = ">=0.20.1,<0.21.0", source = "pytorch-cu121"}
torchaudio = {version = ">=2.5.1,<3.0.0", source = "pytorch-cu121"}
