[tool.poetry]
name = "dglib-python"
version = "0.1.0"
description = ""
authors = ["daehyung"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "0.34.2"
httpx = "0.28.1"
pydantic = "2.11.4"
python-multipart = "0.0.20"
apscheduler = "3.11.0"
requests = "2.32.3"
pytz = "^2025.2"

[tool.poetry.scripts]
start = "dglib_python.book_main:main"
dev = "dglib_python.book_main:dev"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"